--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,14 @@
         <meta charset="UTF-8" />
     </head>
     <body>
-    <h1>Это заголовок первого уровня</h1>
-    <h2>Это заголовок второго уровня</h2>
-    <ol>
-        <li><a href='https://vk.com/id135732126'>Мой ВК</a></li>
-        <li><a href='https://instagram.com/quicksiver_meow'>Мой инст</a></li>
-        <li><a href='https://github.com/quicksilver32'>Мой гитхаб</a></li>
-    </ol>
+        <h1>Это заголовок первого уровня</h1>
+        <h2>Это заголовок второго уровня</h2>
+        <ol>
+            <li><a href="https://vk.com/id135732126">Мой ВК</a></li>
+            <li>
+                <a href="https://instagram.com/quicksilver_meow">Мой инст</a>
+            </li>
+            <li><a href="https://github.com/quicksilver32">Мой гитхаб</a></li>
+        </ol>
     </body>
 </html>
